--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,6 +2,8 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.github.varepsilon.TempSwitcher">
+    <uses-sdk android:minSdkVersion="7" 
+          android:targetSdkVersion="8" />
 
     <!-- This package contains an application...  The 'label' is the name
          to display to the user for the overall application, and provides
