--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -31,6 +31,8 @@
             </intent-filter>
 
         </activity>
+        <receiver android:name=".AlarmReceiver">
+        </receiver>
 
     </application>
 
